--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,12 @@
-body{
-   background-color: tan;
+*,
+*::before,
+*::after {
+   box-sizing: border-box;
+}
+
+header a {
+   text-decoration: none;
+}
+button {
+   border: none;
 }
